--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,10 +6,10 @@
     android:background="#00FFFFBB"
     android:weightSum="1">
 
-<ImageView
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:id="@+id/imageView"
-android:layout_weight="0.82"
-    android:src="@drawable/bucwith_main" />
-    </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_weight="0.82"
+        android:src="@drawable/bucwith" />
+</LinearLayout>
